--- a/data/nlu.yml
+++ b/data/nlu.yml
@@ -27,14 +27,19 @@ nlu:
 
   - intent: plan_date
     examples: |
+      - Are you doing anything this weekend?
+      - Are you free tomorrow?
+      - Do you want to hangout?
       - Do you want to have [lunch]("meal") together?
       - Do you want to grab [lunch]("meal") tomorrow?
+      - Do you wanna [Netflix and chill]("date") ?
       - Let's go for [dinner]("meal")!
       - Let's go out for a meal this weekend!
-      - Let's [grab a drink]("activity")
-      - I'd love to go [shopping]("activity") on the coming holiday!
-      - We should [watch a movie]("activity") next time!
-      - We can go [hiking]("activity") today
+      - Let's [grab a drink]("date")
+      - Let us [explore the city]("outdoors")
+      - I'd love to go [shopping]("shopping") on the coming holiday!
+      - We should [watch a movie]("movie") next time!
+      - We can go [hiking]("outdoors") today
       - We should plan our next date!
 
   - intent: joke
@@ -47,113 +52,86 @@ nlu:
       - Make me laugh
       - My friend told me a funny story
       - Wanna hear an interesting news?
+      - haha
 
   - intent: know_each_other
     examples: |
       - Do you have any [brothers]("family") or sisters["family"]?
-      - I have two [brothers]("family").
-      - I have [kids]("family").
       - Do you like [listening to music]("hobby")?
       - Do you [play instruments]("hobby")?
+      - Do you play [sports]("sports")?
+      - I have two [brothers]("family").
+      - I have [kids]("family").
       - I love playing [basketball]("sports")
       - I play [badminton]("sports") every week with my friends.
-      - Do you play [sports]("sports")?
-      -
+      - What would you do at weekend?
+      - Which [Netflix]("tv") series are you watching?
+      - What is your favorite [TV show]("tv")?
+      - How often do you go [hiking]("activity")?
+      - What's your favorite [restaurant]("meal")?
 
   - intent: play_game
     examples: |
-      -
+      - Let's play a game
+      - Let's do a quiz
+      - play game
+      - quiz
+      - I want to play a game with you
+      - Ice-breaking game
+      - ice breaking game
+      - Are you bored?
+      - Have you played
+      - How about a game
+      - I want to know you more
 
   - intent: harassment
     examples: |
-      -
+      - Why would you send that to me
+      - That's disgusting
+      - You need to stop
+      - Leave me alone
+      - fuck off
+      - You're making me uncomfortable
+      - stop it
+      - shut up
+      - you are pissing me off
+      - I don't like that
 
   - intent: scam/money
     examples: |
-      -
+      - Transfer to this account
+      - Give me your bank account number
+      - I need your account number
+      - Give me your credit card number
+      - Could you buy something for me
+      - Could you pay me first
+      - What's your PIN
+      - I need your password
 
   - intent: scam/personal_details
     examples: |
-      -
+      - What's your ID number?
+      - What's your address?
+      - Take a photo of your passport
+      - Your passport number
+      - I need your phone number now
 
   - intent: scam/sales
     examples: |
-      -
+      - Please help me to buy this package
+      - I need you to purchase this for me
+      - Are you interested in buying?
+      - Please buy
+      - We're on discount
+      - I can give you discount
 
   - intent: suggest/topics
     examples: |
-      -
-
-  - intent: goodbye
-    examples: |
-      - good afternoon
-      - cu
-      - good by
-      - cee you later
-      - good night
-      - bye
-      - goodbye
-      - have a nice day
-      - see you around
-      - bye bye
-      - see you later
-
-  - intent: affirm
-    examples: |
-      - yes
-      - y
-      - indeed
-      - of course
-      - that sounds good
-      - correct
-
-  - intent: deny
-    examples: |
-      - no
-      - n
-      - never
-      - I don't think so
-      - don't like that
-      - no way
-      - not really
-
-  - intent: mood_great
-    examples: |
-      - perfect
-      - great
-      - amazing
-      - feeling like a king
-      - wonderful
-      - I am feeling very good
-      - I am great
-      - I am amazing
-      - I am going to save the world
-      - super stoked
-      - extremely good
-      - so so perfect
-      - so good
-      - so perfect
-
-  - intent: mood_unhappy
-    examples: |
-      - my day was horrible
-      - I am sad
-      - I don't feel very well
-      - I am disappointed
-      - super sad
-      - I'm so sad
-      - sad
-      - very sad
-      - unhappy
-      - not good
-      - not very good
-      - extremly sad
-      - so saad
-      - so sad
-
-  - intent: bot_challenge
-    examples: |
-      - are you a bot?
-      - are you a human?
-      - am I talking to a bot?
-      - am I talking to a human?
+      - I am bored
+      - I don't know what to talk about
+      - I need some topics for the conversation
+      - The weather is good
+      - I am new to this
+      - This is my first match
+      - This is the first time I'm doing this
+      - I am new to this
