--- a/data/nlu.yml
+++ b/data/nlu.yml
@@ -20,10 +20,10 @@ nlu:
 
   - intent: intro_self_intro
     examples: |
-      - My name is [Nick]("person_name"), nice to meet you!
-      - Hi! I am [Jeff]("person_name").
-      - This is [Samantha]("person_name"), hello!
-      - I am an [engineer]("profession").
+      - My name is [Nick](person_name), nice to meet you!
+      - Hi! I am [Jeff](person_name).
+      - This is [Samantha](person_name), hello!
+      - I am an [engineer](profession).
       - My job is [sales manager]("occupation").
 
   - intent: plan_date
@@ -31,16 +31,16 @@ nlu:
       - Are you doing anything this weekend?
       - Are you free tomorrow?
       - Do you want to hangout?
-      - Do you want to have [lunch]("meal") together?
-      - Do you want to grab [lunch]("meal") tomorrow?
-      - Do you wanna [Netflix and chill]("date") ?
-      - Let's go for [dinner]("meal")!
+      - Do you want to have [lunch](meal) together?
+      - Do you want to grab [lunch](meal) tomorrow?
+      - Do you wanna [Netflix and chill](date) ?
+      - Let's go for [dinner](meal)!
       - Let's go out for a meal this weekend!
-      - Let's [grab a drink]("date")
-      - Let us [explore the city]("outdoors")
-      - I'd love to go [shopping]("shopping") on the coming holiday!
-      - We should [watch a movie]("movie") next time!
-      - We can go [hiking]("outdoors") today
+      - Let's [grab a drink](date)
+      - Let us [explore the city](outdoors)
+      - I'd love to go [shopping](shopping) on the coming holiday!
+      - We should [watch a movie](movie) next time!
+      - We can go [hiking](outdoors) today
       - We should plan our next date!
 
   - intent: joke
@@ -60,21 +60,21 @@ nlu:
       - What's your name?
       - What is your name?
       - How should i call you?
-      - Do you have any [brothers]("family") or sisters["family"]?
-      - Do you like [listening to music]("hobby")?
-      - Do you [play instruments]("hobby")?
-      - Do you play [sports]("sports")?
-      - I have two [brothers]("family").
-      - I have [kids]("family").
-      - I love playing [basketball]("sports")
-      - I play [badminton]("sports") every week with my friends.
-      - I going [jogging]("outdoors") everyday.
-      - I [jog]("outdoors") when i'm free.
+      - Do you have any [brothers](family) or [sisters](family)?
+      - Do you like [listening to music](hobby)?
+      - Do you [play instruments](hobby)?
+      - Do you play [sports](sports)?
+      - I have two [brothers](family).
+      - I have [kids](family).
+      - I love playing [basketball](sports)
+      - I play [badminton](sports) every week with my friends.
+      - I going [jogging](outdoors) everyday.
+      - I [jog](outdoors) when i'm free.
       - What would you do at weekend?
-      - Which [Netflix]("tv") series are you watching?
-      - What is your favorite [TV show]("tv")?
-      - How often do you go [hiking]("activity")?
-      - What's your favorite [restaurant]("meal")?
+      - Which [Netflix](tv) series are you watching?
+      - What is your favorite [TV show](tv)?
+      - How often do you go [hiking](activity)?
+      - What's your favorite [restaurant](meal)?
 
   - intent: play_game
     examples: |
