--- a/config.yml
+++ b/config.yml
@@ -2,22 +2,34 @@
 # https://rasa.com/docs/rasa/nlu/components/
 language: en
 
+# Pipeline 1
 pipeline:
   - name: SpacyNLP
   - name: SpacyTokenizer
   - name: SpacyFeaturizer
-  - name: RegexFeaturizer
-  - name: LexicalSyntacticFeaturizer
-  - name: CountVectorsFeaturizer
-  - name: CountVectorsFeaturizer
-    analyzer: "char_wb"
-    min_ngram: 1
-    max_ngram: 4
-  - name: DIETClassifier
-    epochs: 100
+  - name: SpacyEntityExtractor
   - name: EntitySynonymMapper
-  - name: ResponseSelector
-    epochs: 100
+  - name: SklearnIntentClassifier
+
+# Pipeline 2
+# pipeline:
+# - name: SpacyNLP
+#   model: "en_core_web_sm"
+# - name: SpacyTokenizer
+# - name: SpacyEntityExtractor
+# - name: SpacyFeaturizer
+#   pooling: mean
+# - name: CountVectorsFeaturizer
+#   analyzer: char_wb
+#   min_ngram: 1
+#   max_ngram: 2
+# - name: DIETClassifier
+#   epochs: 1
+
+# policies:
+#   - name: MemoizationPolicy
+#   - name: KerasPolicy
+#   - name: MappingPolicy
 
 # # No configuration for the NLU pipeline was provided. The following default pipeline was used to train your model.
 # # If you'd like to customize it, uncomment and adjust the pipeline.
