--- a/config.yml
+++ b/config.yml
@@ -1,30 +1,17 @@
 # Configuration for Rasa NLU.
 # https://rasa.com/docs/rasa/nlu/components/
+
 language: en
 
 # Pipeline 1
 pipeline:
-  - name: SpacyNLP
-  - name: SpacyTokenizer
-  - name: SpacyFeaturizer
+  - name: "SpacyNLP"
+  - name: "SpacyTokenizer"
+  - name: "SpacyFeaturizer"
+    "pooling": "mean"
   - name: SpacyEntityExtractor
   - name: EntitySynonymMapper
   - name: SklearnIntentClassifier
-
-# Pipeline 2
-# pipeline:
-# - name: SpacyNLP
-#   model: "en_core_web_sm"
-# - name: SpacyTokenizer
-# - name: SpacyEntityExtractor
-# - name: SpacyFeaturizer
-#   pooling: mean
-# - name: CountVectorsFeaturizer
-#   analyzer: char_wb
-#   min_ngram: 1
-#   max_ngram: 2
-# - name: DIETClassifier
-#   epochs: 1
 
 # policies:
 #   - name: MemoizationPolicy
